--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.victorhom.flickster">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_launcher_icon"
         android:label="@string/app_name"
+        android:logo="@drawable/moviews_actionbar"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MovieActivity">
@@ -16,6 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MovieInformationActivity"></activity>
     </application>
 
 </manifest>
